k8s-manifests/overlays/uat/superapp/ecommerce/patch/patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-erp
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: ecommerce-erp
        image: harbor.cbe.com.et/cbe-superapp/ecommerce-erp-uat
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /var/lib/odoo
            name: cbe-odoo-volume
          - name: odoo-config-volume
            mountPath: /etc/odoo/odoo.conf
            subPath: odoo.conf
      volumes:
        - name: cbe-odoo-volume
          persistentVolumeClaim:
            claimName: cbe-odoo-pvc-uat
        - name: odoo-config-volume
          configMap:
            name: odoo-config
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: ecommerce
        image: harbor.cbe.com.et/cbe-superapp/ecommerce-uat
        imagePullPolicy: Always
